fix:  내 피드 조회 API와 썸네일 응답 명칭 정리